Hero text alignment fixed

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 .hero-text {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: left;
 	flex-direction: column;
 	gap: 1.5rem;
 }
